Correction principale du bug de menu qui overflow plein de choses qu'il n'est pas supposé comme les alertes

--- a/src/common/widgets/spinner/Spinner.module.scss
+++ b/src/common/widgets/spinner/Spinner.module.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(19, 26, 68, 0.631);
-    z-index: 100;
+    z-index: $zindex-popover;
 
     display: flex;
     justify-content: center;
