--- a/src/layouts/Navigation/MainNav/Nav.module.scss
+++ b/src/layouts/Navigation/MainNav/Nav.module.scss
@@ -6,7 +6,6 @@
     top: 0px;
     bottom: 0px;
     width: 100%;
-    z-index: 1019;
     clip-path: inset(0 0 100% 0);
     overflow: auto;
 
